Aggiunta cancellazione del programma e introdotte le routine

--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="500"
         WindowStartupLocation="Manual"
-        ResizeMode="CanMinimize"
+        ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
         Topmost="True">
     <Grid>
