Impostato avvio come amministratore e aggiunte icone nome programma

--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminLauncher.AppWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="500"
+        Title="Admin Launcher by De Santis Kevin" Height="800" Width="500"
         WindowStartupLocation="Manual"
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
         Topmost="True"
-        Closing="Window_Closing">
+        Closing="Window_Closing" Icon="/rocket.png">
     <Grid>
         <!-- Menu bar -->
         <Menu VerticalAlignment="Top">
