aggiunto quick run e posizionamento sempre a destra

--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -16,6 +16,7 @@
         <Menu VerticalAlignment="Top">
             <MenuItem Header="Add Program" Click="AddProgram_Click"/>
             <MenuItem Header="Add Routine" Click="AddRoutine_Click"/>
+            <MenuItem Header="Quick Run" Click="QuickRun_Click"/>
         </Menu>
 
         <ScrollViewer x:Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="0,30,0,0">
