--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -14,9 +14,11 @@
     <Grid>
 
         <Menu VerticalAlignment="Top">
+            <MenuItem Header="Home" Click="Home_Click"/>
             <MenuItem Header="Add Program" Click="AddProgram_Click"/>
             <MenuItem Header="Add Routine" Click="AddRoutine_Click"/>
             <MenuItem Header="Quick Run" Click="QuickRun_Click"/>
+            <MenuItem Header="About" Click="About_Click"/>
         </Menu>
 
         <ScrollViewer x:Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="0,30,0,0">
@@ -67,6 +69,43 @@
                 <Button Content="Save" Click="SaveRoutine_Click" Width="100" Margin="5" />
                 <Button Content="Cancel" Click="CancelRoutine_Click" Width="100" Margin="5" />
             </StackPanel>
+        </StackPanel>
+        <StackPanel x:Name="AbountPanel" Visibility="Collapsed" Margin="0,30,0,0">
+
+            <!-- Title with Software Name and Version -->
+            <TextBlock FontSize="24" FontWeight="Bold" Text="AdminLauncher v0.0.1" HorizontalAlignment="Center" Margin="0,10,0,20"/>
+
+            <!-- Authors/Developers -->
+            <TextBlock FontSize="16" FontWeight="Bold" Text="Developed by" Margin="0,10,0,10"/>
+            <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+            De Santis Kevin
+            </TextBlock>
+
+            <!-- License -->
+            <TextBlock FontSize="16" FontWeight="Bold" Text="License" Margin="0,10,0,10"/>
+            <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+            This software is distributed under the GNU General Public License v3.0.
+            </TextBlock>
+
+            <!-- Useful Links -->
+            <TextBlock FontSize="16" FontWeight="Bold" Text="Useful Links" Margin="0,10,0,10"/>
+            <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+            <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher" RequestNavigate="Hyperlink_RequestNavigate">GitHub repository</Hyperlink>
+            </TextBlock>
+            
+            <!-- Credits -->
+            <TextBlock FontSize="16" FontWeight="Bold" Text="Credits" Margin="0,10,0,10"/>
+            <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+            IconExtractor by jsakamoto <Hyperlink NavigateUri="https://github.com/jsakamoto/iconextractor" RequestNavigate="Hyperlink_RequestNavigate">ProjectSite</Hyperlink>
+            </TextBlock>
+
+            <!-- Support and contact -->
+            <TextBlock FontSize="16" FontWeight="Bold" Text="Support" Margin="0,10,0,10"/>
+            <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+            To report bugs or request assistance, open a issue:
+            <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher/issues">GitHub issue</Hyperlink>
+            </TextBlock>
+
         </StackPanel>
     </Grid>
 </Window>
