--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -10,7 +10,7 @@
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
         Topmost="True"
-        Closing="Window_Closing" Icon="/rocket.png">
+        Closing="Window_Closing" Icon="/rocket.png" Loaded="Window_Loaded">
     <Grid>
 
         <Menu VerticalAlignment="Top">
@@ -18,7 +18,7 @@
             <MenuItem Header="Add Program" Click="AddProgram_Click"/>
             <MenuItem Header="Add Routine" Click="AddRoutine_Click"/>
             <MenuItem Header="Quick Run" Click="QuickRun_Click"/>
-            <MenuItem Header="About" Click="About_Click"/>
+            <MenuItem Header="?" Click="About_Click"/>
         </Menu>
 
         <ScrollViewer x:Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="0,30,0,0">
@@ -73,7 +73,26 @@
         <StackPanel x:Name="AbountPanel" Visibility="Collapsed" Margin="0,30,0,0">
 
             <!-- Title with Software Name and Version -->
-            <TextBlock FontSize="24" FontWeight="Bold" Text="AdminLauncher v0.0.1" HorizontalAlignment="Center" Margin="0,10,0,20"/>
+            <Grid HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" FontSize="24" FontWeight="Bold" Text="Admin Launcher " Margin="0,10,0,0"/>
+                <TextBlock x:Name="CurrentVersionText" Grid.Column="1" FontSize="24" FontWeight="Bold" Text="0.0.0"  Margin="0,10,0,0"/>
+            </Grid>
+            <Grid HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" FontSize="14"  Text="Last version: " HorizontalAlignment="Left" />
+                <TextBlock x:Name="LastVersionText" Grid.Column="1" FontSize="14"  Text="0.0.0" HorizontalAlignment="Left" Margin="0,0,10,0"/>
+                <TextBlock x:Name="UpdateLink" Grid.Column="2" FontSize="14" TextWrapping="Wrap" Visibility="Collapsed" Margin="0,0,0,10">
+                    <Hyperlink x:Name="UpdateLinkHyperLink" NavigateUri="https://github.com/kdesantis/AdminLauncher/releases" RequestNavigate="Hyperlink_RequestNavigate">DonwloadNow</Hyperlink>
+                </TextBlock>
+            </Grid>
 
             <!-- Authors/Developers -->
             <TextBlock FontSize="16" FontWeight="Bold" Text="Developed by" Margin="0,10,0,10"/>
@@ -92,7 +111,7 @@
             <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
             <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher" RequestNavigate="Hyperlink_RequestNavigate">GitHub repository</Hyperlink>
             </TextBlock>
-            
+
             <!-- Credits -->
             <TextBlock FontSize="16" FontWeight="Bold" Text="Credits" Margin="0,10,0,10"/>
             <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
@@ -103,7 +122,7 @@
             <TextBlock FontSize="16" FontWeight="Bold" Text="Support" Margin="0,10,0,10"/>
             <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
             To report bugs or request assistance, open a issue:
-            <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher/issues">GitHub issue</Hyperlink>
+            <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher/issues" RequestNavigate="Hyperlink_RequestNavigate">GitHub issue</Hyperlink>
             </TextBlock>
 
         </StackPanel>
