--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -15,6 +15,7 @@
 
         <Menu VerticalAlignment="Top">
             <MenuItem Header="Home" Click="Home_Click"/>
+            <MenuItem Header="Settings" Click="Settings_Click"/>
             <MenuItem Header="Add Program" Click="AddProgram_Click"/>
             <MenuItem Header="Add Routine" Click="AddRoutine_Click"/>
             <MenuItem Header="Quick Run" Click="QuickRun_Click"/>
@@ -24,6 +25,14 @@
         <ScrollViewer x:Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="0,30,0,0">
             <StackPanel x:Name="ButtonPanel" VerticalAlignment="Top" HorizontalAlignment="Stretch" />
         </ScrollViewer>
+        
+        <StackPanel x:Name="SettingsPanel" Visibility="Collapsed" Margin="0,30,0,0">
+            <TextBlock Text="Settings" FontWeight="Bold" FontSize="16" Margin="10" />
+            
+            <Label Content="Buttons Orientation" />
+            <ComboBox x:Name="ButtonsOrientationCombobox" Margin="5" SelectionChanged="ButtonsOrientationCombobox_Selected"/>
+            
+        </StackPanel>
 
         <StackPanel x:Name="AddProgramPanel" Visibility="Collapsed" Margin="0,30,0,0">
             <TextBlock Text="Add New Program" FontWeight="Bold" FontSize="16" Margin="10" />
