Inserted check to avoid multiple sessions; added informational message at first close

--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -10,7 +10,8 @@
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
         Topmost="True"
-        Closing="Window_Closing" Icon="/rocket.png" Loaded="Window_Loaded">
+        Closing="Window_Closing" Icon="/rocket.png" Loaded="Window_Loaded"
+        Closed="Window_Closed">
     <Grid>
 
         <Menu VerticalAlignment="Top">
