--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminLauncher.AppWPF"
         mc:Ignorable="d"
-        Title="Admin Launcher" Height="800" Width="400"
+        Title="Admin Launcher" Height="800" Width="450"
         WindowStartupLocation="Manual"
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
@@ -21,15 +21,21 @@
             <MenuItem Header="Add Routine" Click="AddRoutine_Click"/>
             <MenuItem Header="Quick Run" Click="QuickRun_Click"/>
             <MenuItem Header="?" Click="About_Click"/>
+            <MenuItem Click="KoFi_Click">
+                <MenuItem.Icon>
+                    <Image Source="pack://application:,,,/Resources/kofi_symbol.png" Width="16" Height="16"/>
+                </MenuItem.Icon>
+                <MenuItem.Header>Donate</MenuItem.Header>
+            </MenuItem>
         </Menu>
 
         <ScrollViewer x:Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="0,30,0,0">
             <StackPanel x:Name="ButtonPanel" VerticalAlignment="Top" HorizontalAlignment="Stretch" />
         </ScrollViewer>
-        
+
         <StackPanel x:Name="SettingsPanel" Visibility="Collapsed" Margin="0,30,0,0">
             <TextBlock Text="Settings" FontWeight="Bold" FontSize="16" Margin="10" />
-            
+
             <Label Content="Buttons Orientation" />
             <ComboBox x:Name="ButtonsOrientationCombobox" Margin="5" SelectionChanged="ButtonsOrientationCombobox_Selected"/>
             <Label Content="File dialog initial path" />
@@ -97,6 +103,7 @@
         </StackPanel>
         <StackPanel x:Name="AbountPanel" Visibility="Collapsed" Margin="5,30,5,0">
 
+
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -123,11 +130,19 @@
             </Grid>
 
             <!-- Authors/Developers -->
+
             <TextBlock FontSize="16" FontWeight="Bold" Text="Developed by" Margin="0,10,0,10"/>
             <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
             De Santis Kevin
             </TextBlock>
-
+            <Button Width="200" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" Click="KoFi_Click">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <!-- Icona Ko-fi dalla risorsa -->
+                    <Image Source="pack://application:,,,/Resources/kofi_symbol.png" Width="24" Height="24" Margin="0,0,10,0"/>
+                    <!-- Testo del pulsante -->
+                    <TextBlock VerticalAlignment="Center" FontSize="14" Text="Support Me on Ko-fi"/>
+                </StackPanel>
+            </Button>
             <!-- License -->
             <TextBlock FontSize="16" FontWeight="Bold" Text="License" Margin="0,10,0,10"/>
             <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
