--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -56,7 +56,7 @@
                         <Button Content="Erase" Click="EraseInitialPath_Click" Grid.Column="2" Margin="0,5,0,5"/>
                     </Grid>
                     <UniformGrid Grid.Row="2" Margin="5" Columns="2" Rows="2">
-                        <TextBlock Text="Accents" Margin="0 0 2 0" VerticalAlignment="Center" />
+                        <TextBlock Text="BaseTheme" Margin="0 0 2 0" VerticalAlignment="Center" />
                         <TextBlock Text="Colors" Margin="2 0 0 0" VerticalAlignment="Center" />
 
                         <ComboBox x:Name="ThemeBaseSelector" Margin="0 0 2 0" VerticalAlignment="Center" IsSynchronizedWithCurrentItem="False" SelectionChanged="ThemeBaseSelectionChanged"/>
